doc/windows/VB6.0/32bit/multi_card/gts.bas


Public Declare Function GT_LnXYOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZAOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal a As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYG0Override2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZG0Override2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZAG0Override2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal a As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYROverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYCOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal xCenter As Double, ByVal yCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcYZROverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0)
Public Declare Function GT_ArcYZCOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal y As Long, ByVal z As Long, ByVal yCenter As Double, ByVal zCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcZXROverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal z As Long, ByVal x As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0)
Public Declare Function GT_ArcZXCOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal z As Long, ByVal x As Long, ByVal zCenter As Double, ByVal xCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixXYRZ Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixXYCZ Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal xCenter As Double, ByVal yCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixYZRX Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0)
Public Declare Function GT_HelixYZCX Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal yCenter As Double, ByVal zCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixZXRY Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixZXCY Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal zCenter As Double, ByVal xCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixXYRZOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixXYCZOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal xCenter As Double, ByVal yCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixYZRXOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixYZCXOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal yCenter As Double, ByVal zCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixZXRYOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixZXCYOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal zCenter As Double, ByVal xCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZAWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal a As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYG0WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZG0WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZAG0WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal a As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYRWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYCWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal xCenter As Double, ByVal yCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcYZRWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcYZCWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal y As Long, ByVal z As Long, ByVal yCenter As Double, ByVal zCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcZXRWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal z As Long, ByVal x As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcZXCWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal z As Long, ByVal x As Long, ByVal zCenter As Double, ByVal xCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
